kubernetes/projects/eks-cluster/3-tier-application/kubernetes/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: lbistech/3-tier-frontend-app:latest
        ports:
        - containerPort: 80
